--- a/API Course.csproj
+++ b/API Course.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>API_Course</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
+
 
 </Project>
