Created Models,DTOs,Authoirzation for users and edited CharacterService

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=DESKTOP-5B3LSDJ\\SQLEXPRESS; Database=dotnet-rpg; Trusted_Connection =true;"
+  },
+  "AppSettings":{
+    "Token": "my top secert fuckface"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
